--- a/Spoj.Solver/Spoj.Solver.csproj
+++ b/Spoj.Solver/Spoj.Solver.csproj
@@ -55,7 +55,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Solutions\2 - Chieftain\ARMY.cs" />
-    <Compile Include="Solutions\2 - Chieftain\QUADAREA.cs" />
+    <Compile Include="Solutions\2 - Chieftain\NSTEPS.cs" />
+    <None Include="Solutions\2 - Chieftain\QUADAREA.cs" />
     <None Include="Solutions\1 - Settler\TEST.cs" />
     <None Include="Solutions\2 - Chieftain\ADDREV.cs" />
     <None Include="Solutions\TEMPLATE1.cs" />
